--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,8 +1,11 @@
 .product{
-    width:300px;
+    width:290px;
     height: 510px;
-    border: 2px solid #95A0A7;
-    border-radius: 5px;
+    border: 3px solid #95A0A7;
+    border-radius: 10px;
+    position:relative;
+    margin-left:20px;
+    margin-bottom: 50px;
     
 }
 
@@ -26,10 +29,12 @@
 .btn-cart{
     width:100%;
     background:#E30047;
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0 8px 8px;
     border:none;
     font-weight: 500;
+    position: absolute;
+    bottom: 0;
 }
 .btn-cart:hover{
-    background-color: #FF6347;
+    background-color: #F74258;
 }
