--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -38,3 +38,20 @@
 .btn-cart:hover{
     background-color: #F74258;
 }
+/*-------------------------------*\
+Responsive Design
+\*-------------------------------*/
+/*-------------------------------*\
+for mobile device
+\*-------------------------------*/
+@media screen and (max-width:576px) {
+    .product{
+        width:100%;
+        height:550px;
+        
+    }
+    .product img{
+        width:100%;
+        
+    }
+}
