--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,3 +8,32 @@
     gap:10px;
 
 }
+.cart-container{
+    background-color: #FFE4C4;
+    margin-left: 15px;
+    margin-right: 10px;
+    border-radius: 10px;
+    height:1080px;
+    text-align: center;
+    padding:10px;
+}
+/*-------------------------------*\
+Responsive Design
+\*-------------------------------*/
+/*-------------------------------*\
+for mobile device
+\*-------------------------------*/
+@media screen and (max-width:576px){
+    .shop-container {
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+    }
+   .products-container {
+       display: grid;
+       grid-template-columns: repeat(1, 1fr);
+       gap: 5px;
+       margin-right: 10px;
+
+   }
+ 
+}
