--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,7 +1,7 @@
 .product{
     width:290px;
-    height: 510px;
-    border: 3px solid #95A0A7;
+    height: 520px;
+    border: 2px solid #95A0A7;
     border-radius: 10px;
     position:relative;
     margin-left:20px;
@@ -12,6 +12,7 @@
 .product img{
     width:280px;
     height:280px;
+    padding:5px;
 }
 .product-info{
     margin:5px;
@@ -34,9 +35,17 @@
     font-weight: 500;
     position: absolute;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn-text{
+    margin-top: 20px;
+    margin-right: 10px;
 }
 .btn-cart:hover{
     background-color: #F74258;
+    
 }
 /*-------------------------------*\
 Responsive Design
