--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -31,15 +31,31 @@
     background-color: #F74258;
     border:none;
     border-radius: 3px;
-    padding:5px;
+    padding:8px;
 }
 
 .select-again-btn{
-    background-color: #FF6347;
+    background-color: #E30047;
     border:none;
     border-radius: 3px;
-    padding:5px;
+    padding:8px;
     margin-top: 10px;
+    
+}
+.cart-items{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #FF6347;
+    margin-top:5px;
+    margin-bottom: 8px;
+    border-radius: 8px;
+}
+.watch-img{
+    width:40px;
+    border-radius: 50%;
+    margin-right: 5px;
     
 }
 
@@ -65,6 +81,10 @@ for mobile device
    }
    .cart-container{
        height:550px;
+   }
+   .carts-product-name{
+       font-size: 12px;
+       
    }
  
 }
